tests/machine/x/c/update_stmt.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘test_update_adult_status’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:33:9: error: ‘people’ undeclared (first use in this function)
   33 |   if (!(people == tmp1)) {
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:33:9: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:52:11: error: redefinition of ‘name’
   52 |     char *name = tmp4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:49:11: note: previous definition of ‘name’ with type ‘char *’
   49 |     char *name = tmp4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:53:9: error: redefinition of ‘age’
   53 |     int age = tmp4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:50:9: note: previous definition of ‘age’ with type ‘int’
   50 |     int age = tmp4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:54:11: error: redefinition of ‘status’
   54 |     char *status = tmp4.status;
      |           ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:51:11: note: previous definition of ‘status’ with type ‘char *’
   51 |     char *status = tmp4.status;
      |           ^~~~~~

   1: #include <stdio.h>
